# vid_pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: episode14-publish-trigger.txt  season2-catalog-trigger.txt  season2-later-readme.txt  season2-later-status.json  season2-later-trigger.txt  season2-processing-trigger.txt  standalone-marker.txt
.github/workflows/: catalog-season2.yml  ci.yml  lint-diagnostics.yml  probe-official-page.yml  probe-telewebion-network.yml  process-season2-single.yml  process-season2.yml  process-telewebion-0x16c79674.yml  publish-episode14.yml  ruff-report.yml
data/: asre-shirin-season-2-catalog.json  asre-shirin-season-2-episode-23.json  asre-shirin-season-2-episode-24.json  asre-shirin-season-2-episode-25.json  asre-shirin-season-2-episode-26.json
debug/: actions-api-link.md
docs/: standalone-architecture.md
examples/: asre-shirin-season-2-episode-01.json
notebooks/: financial_video_rag_colab.ipynb
processing/asre-shirin-season-2/episode-01/: episode-01.raw.json  episode-01.raw.md  episode-01.review.md  episode.json  result.json  source.json  state.json  video-info.json
processing/asre-shirin-season-2/episode-02/: episode-02.raw.json  episode-02.raw.md  episode-02.review.md  episode.json  result.json  source.json  state.json  video-info.json
processing/telewebion-0x16c79674/: result.json  source.json  status.json
runs/: telewebion-0x16c79674.request.json
scripts/: catalog_asre_shirin.py  download_hls_assets.py  probe_official_page.py  process_season2_episode.py
src/vid_pipeline/: __init__.py  audio.py  clean.py  cli.py  download.py  errors.py  models.py  paths.py  pipeline.py  publish.py  rag.py  review.py  source.py  standalone.py  state.py  transcribe.py
tests/: test_clean.py  test_download.py  test_download_options.py  test_models_state.py  test_pipeline_guards.py  test_review_rag.py  test_source.py  test_source_embed.py  test_standalone.py
(+97 files in other folders)
