[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-video-rag-pipeline"
version = "0.2.0"
description = "Modular video-to-transcript pipeline for Persian financial education content."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Amir Shahbazi" }
]
dependencies = []

[project.optional-dependencies]
download = [
  "yt-dlp"
]
whisper = [
  "faster-whisper>=1.1.0"
]
all = [
  "yt-dlp",
  "faster-whisper>=1.1.0"
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]

[project.scripts]
vid-pipeline = "vid_pipeline.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
